# ClaimsHawkAI

./: .gitignore  .~lock.processed_biden_speech.csv#  README.md  bun.lockb  claimshawk.db  dev.sh  docker-compose.yaml  ff.py  gen_model.py  langchain_ce.py  langchain_ce2.py  ner_model.py  next.config.js  next.config.mjs  openAI.py  package-lock.json  package.json  processed_sentences.csv  qa_model.py  question_answering.ipynb  requirements.txt  sandbox.ipynb  sandbox.py  sandbox.txt  sentences.py  test.py  youtube_captions.py
ai/: pyproject.toml
ai/api/: claimshawk.db
ai/data/: NEW_Trump_Pledges_To_Shut_Down_Department_Of_Education_At_Faith__Freedom_Event__FULL_SPEECH_2024-06-22T203001Z.txt  Obama_out_President_Barack_Obamas_hilarious_final_White_House_correspondents_dinner_speech_2016-05-01_025917.txt  President_Bidens_State_of_the_Union_Address_2024-03-08T034913Z.csv  videos.json
ai/database/: Dockerfile
ai/misc/: qa_model.py
ai/misc/testth/: server.py
ai/services/: langchain_lib.py
src/app/api/ai/: claimshawk.db  pyproject.toml
src/app/api/ai/data/: Donald_Trump_full_speech_at_New_York_Stock_Exchange_after_being_named_TIME_Person_of_the_Year_2024-12-12_165434.txt  Donald_Trumps_full_victory_speech_2024-11-06_080154.txt  Kamala_Harris_full_speech_at_campaign_event_in_Philadelphia_PA_Oct._27_2024_2024-10-28_020549.txt  Kamala_Harris_holds_first_campaign_rally_FULL_SPEECH_2024-07-23_190126.txt  trump22June2024.txt
src/app/api/ai/database/: database.py
src/app/api/ai/misc/: gen_model.py  langchain_13_min.ipynb  ner_model.py  question_answering.ipynb
(+69 files in other folders)
