[project]
name = "ai"
version = "0.1.0"
description = "Ai micro service for claimshawk"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.4",
    "langchain-community>=0.3.4",
    "langchain-openai>=0.2.4",
    "langchain>=0.3.6",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
]
