[project]
name = "ai"
version = "0.1.0"
description = "Ai micro service for claimshawk"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "google-api-python-client>=2.151.0",
    "langchain-community>=0.3.4",
    "langchain-openai>=0.2.4",
    "langchain>=0.3.6",
    "pandas>=2.2.3",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "youtube-transcript-api>=0.6.2",
]
